Fix HTML encoding issues in index.html
Signed-off-by: Yawmel Jihad Guialal <yawmeljihad@gmail.com>

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     }
 
                     // Redirect to map page
-                    window.location.href = 'ccdomap.html';
+                    window.location.href = 'map.html';
                     
                     // For demo purposes, we'll show success
                     loadingOverlay.classList.remove('active');
@@ -431,3 +431,4 @@
     </script>
 </body>
 </html>
+
