Fix login redirect and add AI coding agent instructions
- Fixed login.html redirect from non-existent 'ccdomap.html' to 'index.html'
- Added comprehensive .github/copilot-instructions.md for AI agent guidance
- Documented project architecture, data structures, and development workflows

--- a/login.html
+++ b/login.html
@@ -386,7 +386,7 @@
                     }
 
                     // Redirect to map page
-                    window.location.href = 'ccdomap.html';
+                    window.location.href = 'index.html';
                     
                     // For demo purposes, we'll show success
                     loadingOverlay.classList.remove('active');
