Fix Lanao Del Sur province field format
- Changed province format from 'lanao del sur' to 'lanao-del-sur' for consistency
- Fixed province field for Abrar Institute of Science, Inc.
- Fixed province field for Al-Mumtazz Institute of Marawi - TAC Inc.
- Fixed province field for AM Multi-Skills Training and Assessment Center Inc.
- Ensures province filter works correctly for these institutions

--- a/index.html
+++ b/index.html
@@ -2273,7 +2273,7 @@
                 lat: 8.0084749,
                 lng: 124.3242931,
                 address: "#3 Abrar, Datu Abrar Complex, Brgy. Patani, Marawi City, LDS",
-                province: "lanao del sur",
+                province: "lanao-del-sur",
                 status: "accredited",
                 accreditationDate: "June 20, 2023",
                 expiryDate: "June 19, 2028",
@@ -2290,7 +2290,7 @@
                 lat: 8.01293,
                 lng: 124.278952,
                 address: "9410 Purok, Poblacion, Marawi City, Lanao del Sur",
-                province: "lanao del sur",
+                province: "lanao-del-sur",
                 status: "accredited",
                 accreditationDate: "April 12, 2023",
                 expiryDate: "April 11, 2028",
@@ -2308,7 +2308,7 @@
                 lat: 7.966593,
                 lng: 124.25371,
                 address: "9410 Purok, Poblacion, Marawi City, Lanao del Sur",
-                province: "lanao del sur",
+                province: "lanao-del-sur",
                 status: "accredited",
                 accreditationDate: "April 12, 2023",
                 expiryDate: "April 11, 2028",
