Add Macaumbao Skills Training Center Inc. to Lanao Del Sur
- Added new TVET institution in Poona Bayabao, Lanao del Sur
- Institution status: accredited
- Offers Tile Setting NC II program
- Contact: Alyasa M. Oranggaga (President)

--- a/index.html
+++ b/index.html
@@ -2320,6 +2320,23 @@
                             <tr><td>Scaffolding Works NC II (Supported Type Scaffold)</td><td>181</td><td>20221936CONSCW218025</td><td>April 12, 2023</td><td>April 11, 2028</td></tr>
                             </tbody></table>`
             },
+            {
+                name: "Macaumbao Skills Training Center Inc.",
+                type: "tvet",
+                lat: 7.849601,
+                lng: 124.330979,
+                address: "Brgy. Cadayonan, Poona bayabao, Lanao del Sur",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "June 20, 2023",
+                expiryDate: "June 19, 2028",
+                contactPerson: "Alyasa M. Oranggaga (President)",
+                contactNumber: "09179344650/ 09091971881",
+                email: "macaumbaos@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Tile Setting NC II</td><td>117</td><td>20231536CONTIL218043</td><td>June 20, 2023</td><td>June 19, 2028</td></tr>
+                            </tbody></table>`   
+            }
         ];
 
         let markers = [];
