Add new institutions to Lanao del Sur province

--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
             </div>
         </div>
     </div>
-
+       
     <div class="search-box">
         <input type="text" id="searchInput" placeholder="🔍 Search institution name...">
         <div class="search-results" id="searchResults"></div>
@@ -2336,7 +2336,214 @@
                 coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
                             <tr><td>Tile Setting NC II</td><td>117</td><td>20231536CONTIL218043</td><td>June 20, 2023</td><td>June 19, 2028</td></tr>
                             </tbody></table>`   
-            }
+            },
+            {
+                name: "Madz Training Institute and Assessment Center Inc.",
+                type: "tvet",
+                lat: 7.7701569,
+                lng: 124.2323779,
+                address: "Pantar, Lumbatan, Lanao del Sur",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "February 13, 2023",
+                expiryDate: "February 12, 2028",
+                contactPerson: "Acmad L. Matuan (President)",
+                contactNumber: "09078709657",
+                email: "acmadmatuan9@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Tile Setting NC II</td><td>157</td><td>20231536CONTIL218013</td><td>February 13, 2023</td><td>February 12, 2028</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Magogop Training Center Service Inc.",
+                type: "tvet",
+                lat: 8.01,
+                lng: 124.18,
+                address: "0224 Officer's Line, Panggao Saduc, Marawi City, Lanao del Sur",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "June 20, 2023",
+                expiryDate: "June 19, 2028",
+                contactPerson: "Marpha M. Dianalan ",
+                contactNumber: "09559737995",
+                email: "magogoptrainingcenter@yahoo.com.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Bread and Pastry Production NC II</td><td>141</td><td>20201536TRSBPP209019</td><td>June 20, 2023</td><td>June 19, 2028</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Maharatul Jawdati Training and Assessment Center Incorporated",
+                type: "tvet",
+                lat: 7.8716911,
+                lng: 124.3491026,
+                address: "Bacolod II, Lumba-Bayabao (Maguing), Lanao del Sur",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "June 20, 2023",
+                expiryDate: "June 19, 2028",
+                contactPerson: "Jerhana I. Dagalangit (President) ",
+                contactNumber: "09090874057/09092648639",
+                email: "maharatuljawdatitaci@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Masonry NC II</td><td>181</td><td>20231936CONMAS218061</td><td>November 15, 2023</td><td>November 16, 2028</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Marawi Skills Training and Assessment Center Service Cooperative",
+                type: "tvet",
+                lat: 8.0063141,
+                lng: 124.20826,
+                address: "Ampuan Street Lilod Madaya Pob., Marawi City, Lanao Del Sur",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "June 20, 2023",
+                expiryDate: "June 19, 2028",
+                contactPerson: "Anina M. Ampuan",
+                contactNumber: "09176582243/09173040151",
+                email: "aaaampuan@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Carpentry NC II</td><td>301</td><td>20241936CONCAR218163</td><td>November 16, 2023</td><td>November 15, 2028</td></tr>
+                            <tr><td>Tile Setting NC II</td><td>117</td><td>20241936CONTIL218164</td><td>November 16, 2023</td><td>November 21, 2028</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Mascom Computer Learning Centre Marawi City, Inc.",
+                type: "tvet",
+                lat: 8.01037,
+                lng: 124.29015,
+                address: "Brgy. Lilod Saduc, Marawi City, Lanao Del Sur",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "December 6, 2024",
+                expiryDate: "December 5, 2029",
+                contactPerson: "Abdulnoor A. Amerol",
+                contactNumber: "9365077778/91299524007",
+                email: "mascomcomputers16@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Computer Systems Servicing NC II</td><td>280</td><td>20241936ELCCSS213184</td><td>December 6, 2024</td><td>December 5, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Mindanao State University - Lanao National College of Arts and Trades",
+                type: "tvet",
+                lat: 8.006147,
+                lng: 124.2880886,
+                address: "Brgy. Panggao Saduc, Marawi City, Lanao Del Sur",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "December 6, 2024",
+                expiryDate: "December 5, 2029",
+                contactPerson: "Supt. Cairany Dia Gandamra, RN, JD, MPA",
+                contactNumber: "Not Indicated",
+                email: "noronsomalipao@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Dressmaking NC II</td><td>275</td><td>20241936GRMDRM205165</td><td>November 22, 2024</td><td>November 21, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Mulondo Institute of Technology Training and Assessment Center Inc.",
+                type: "tvet",
+                lat: 7.917185,
+                lng: 124.35364,
+                address: "08 Cadidia Abo Bldg., Cabasaran St., Mulondo, Lanao del Sur",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "August 25, 2023",
+                expiryDate: "August 24, 2028",
+                contactPerson: "Mrs. Cadidia Capal Abo (President)",
+                contactNumber: "09215444387",
+                email: "baifaisahabo@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Bread and Pastry Production NC II</td><td>141</td><td>20231936TRSBPP209053</td><td>August 25, 2024</td><td>August 24, 2028</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "MZ Training and Assessment Center, Inc.",
+                type: "tvet",
+                lat: 7.88159,
+                lng: 124.04895,
+                address: "Brgy. Balintad, Madamba,Lanao Del Sur",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "June 24, 2025",
+                expiryDate: "June 23, 2030",
+                contactPerson: "Ebrahim B. Hassan (President)",
+                contactNumber: "09617049790",
+                email: "mztaci2024@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Organic Agriculture Production NC II</td><td>232</td><td>20251936AFFOAP212026</td><td>June 24, 2025</td><td>June 23, 2050</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "One 5 Mantra Workforce Training Center Inc.",
+                type: "tvet",
+                lat: 7.996608,
+                lng: 124.266132,
+                address: "Brgy. Biaba-Damag, Marawi City",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "July 27, 2024",
+                expiryDate: "July 26, 2029",
+                contactPerson: "Engr. Diamel D. Mogni ",
+                contactNumber: "09203056933",
+                email: "Not Indicated",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Tile Setting NC II</td><td>117</td><td>20241936CONTIL218083</td><td>July 27, 2024</td><td>July 26, 2029</td></tr>
+                            <tr><td>Carpentry NC II</td><td>301</td><td>20241936CONCAR218084</td><td>July 27, 2024</td><td>July 26, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Pagari Training and Assessment Center, Inc.",
+                type: "tvet",
+                lat: 7.968537,
+                lng: 124.254475,
+                address: "Brgy. Lumbaca Ingud, Marantao, Lanao del Sur",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "October 4, 2023",
+                expiryDate: "October,5 2028",
+                contactPerson: "Zaalica Magarang(President)",
+                contactNumber: "09993813211 & 099758468465",
+                email: "zaalicamagarang@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Dressmaking NC II</td><td>275</td><td>20181936GRMDRM205100</td><td>October 4, 2023</td><td>Ocotber 5, 2028</td></tr>
+                            <tr><td>Dressmaking NC II</td><td>275</td><td>20251936GRMDRM205012</td><td>February 26, 2025</td><td>February 25, 2030</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Pastry Arts Integrated Skills Training and Assessment Center Inc.",
+                type: "tvet",
+                lat: 8.0024893,
+                lng: 124.2811431,
+                address: "Buadi Sacayo (Green), Marawi City, Lanao del Sur",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "June 20, 2023",
+                expiryDate: "June 19, 2028",
+                contactPerson: "Yahara Guro",
+                contactNumber: "Not Indicated",
+                email: "Not Indicated",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Bread and Pastry Production NC II</td><td>141</td><td>20221936TRSBPP209024</td><td>June 20, 2023</td><td>June 19, 2028</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Prime Adept Learning & Multi Training and Assessment Center Inc.",
+                type: "tvet",
+                lat: 7.9883792,
+                lng: 124.1059911,
+                address: "Brgy. Cadapaan, Balindong, Lanao del Sur",
+                province: "lanao-del-sur",
+                status: "accredited",
+                accreditationDate: "May 14, 2024",
+                expiryDate: "May 13, 2029",
+                contactPerson: "Vella D. Bubong (President)",
+                contactNumber: "Not Indicated",
+                email: "Not Indicated",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Bread and Pastry Production NC II</td><td>141</td><td>20241936TRSBPP209035</td><td>May 14, 2024</td><td>May 13, 2029</td></tr>
+                            </tbody></table>`   
+            },
         ];
 
         let markers = [];
