Update copilot instructions with accurate line numbers and add Al-Mani Farmers Marketing Cooperative institution

--- a/index.html
+++ b/index.html
@@ -2783,6 +2783,31 @@
                             
                             </tbody></table>`   
             },
+            {
+                name: "Al-Mani Farmers Marketing Cooperative",
+                type: "tvet",
+                lat: 6.832321,
+                lng: 124.505339,
+                address: "Meta Datu Unsay, Maguindanao del Sur",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "April 18, 2024",
+                expiryDate: "April 17, 2029",
+                contactPerson: "Bagiyan M. Angeles",
+                contactNumber: "Not Indicated",
+                email: "Not Indicated",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Raise Organic Chicken Leading to Organic Agriculture Production NC II</td><td>72</td><td>20201988AFFOAP212CC2057</td><td>April 18, 2024</td><td>April 17, 2029</td></tr>
+                            <tr><td>Produce Organic Vegetables Leading to Organic Agriculture Production NC II</td><td>64</td><td>20201988AFFOAP212CC2058</td><td>April 18, 2024</td><td>April 17, 2029</td></tr>
+                            <tr><td>Produce Organic Concoction and Extract Leading to Organic Agriculture Production NC II</td><td>64</td><td>20211988AFFOAP212CC2013</td><td>April 18, 2024</td><td>April 17, 2029</td></tr>
+                            <tr><td>Produce Organic Fertilizers Leading to Organic Agriculture Production NC II</td><td>64</td><td>20211988AFFOAP212CC2014</td><td>April 18, 2024</td><td>April 17, 2029</td></tr>
+                            <tr><td>Production of High-Quality Inbred Rice, and Seed Certification, and Farm Mechanization</td><td>96</td><td>202119880005</td><td>April 18, 2024</td><td>April 17, 2029</td></tr>
+                            <tr><td>Rice Machinery Operations NC II</td><td>232</td><td>20241988AFFRMO207078</td><td>July 24, 2024</td><td>July 23, 2029</td></tr>
+                            <tr><td>Organic Agriculture Production NC II</td><td>232</td><td>20241988AFFOAP212079</td><td>July 24, 2024</td><td>July 23, 2029</td></tr>
+                            <tr><td>Animal Production (Poultry-Chicken) NC II</td><td>312</td><td>20241988AFFAPP213080</td><td>July 24, 2024</td><td>July 23, 2029</td></tr>
+                            <tr><td>Agroentrepreneurship NC III</td><td>445</td><td>20241988AFFAGE217077</td><td>July 24, 2024</td><td>July 23, 2029</td></tr>
+                            </tbody></table>`   
+            },
             
         ];
 
